# timed-option

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: std_instant.rs  timed_value.rs
